themedir         = $(datadir)/themes
platadir         = $(DESTDIR)$(themedir)/Plata
luminedir        = $(DESTDIR)$(themedir)/Plata-Lumine
noirdir          = $(DESTDIR)$(themedir)/Plata-Noir
platacompactdir  = $(DESTDIR)$(themedir)/Plata-Compact
luminecompactdir = $(DESTDIR)$(themedir)/Plata-Lumine-Compact
noircompactdir   = $(DESTDIR)$(themedir)/Plata-Noir-Compact

metacitydir   = $(srcdir)/metacity-1
metacity_xml_file = \
	$(metacitydir)/dark/metacity-theme-3.xml
metacity_asset_file = \
	$(metacitydir)/dark/button_close_prelight.svg \
	$(metacitydir)/dark/button_close_pressed.svg \
	$(metacitydir)/dark/button_close.svg \
	$(metacitydir)/dark/button_maximize_prelight.svg \
	$(metacitydir)/dark/button_maximize_pressed.svg \
	$(metacitydir)/dark/button_maximize.svg \
	$(metacitydir)/dark/button_menu_prelight.svg \
	$(metacitydir)/dark/button_menu_pressed.svg \
	$(metacitydir)/dark/button_menu.svg \
	$(metacitydir)/dark/button_minimize_prelight.svg \
	$(metacitydir)/dark/button_minimize_pressed.svg \
	$(metacitydir)/dark/button_minimize.svg \
	$(metacitydir)/dark/button_shade_prelight.svg \
	$(metacitydir)/dark/button_shade_pressed.svg \
	$(metacitydir)/dark/button_shade.svg \
	$(metacitydir)/dark/button_unshade_prelight.svg \
	$(metacitydir)/dark/button_unshade_pressed.svg \
	$(metacitydir)/dark/button_unshade.svg \
	$(metacitydir)/dark/max_button_unmaximize_prelight.svg \
	$(metacitydir)/dark/max_button_unmaximize_pressed.svg \
	$(metacitydir)/dark/max_button_unmaximize.svg \
	$(metacitydir)/dark/thumbnail.png
metacity_compact_xml_file = \
	$(metacitydir)/dark-compact/metacity-theme-3.xml
metacity_compact_asset_file = \
	$(metacitydir)/dark-compact/button_close_prelight.svg \
	$(metacitydir)/dark-compact/button_close_pressed.svg \
	$(metacitydir)/dark-compact/button_close.svg \
	$(metacitydir)/dark-compact/button_maximize_prelight.svg \
	$(metacitydir)/dark-compact/button_maximize_pressed.svg \
	$(metacitydir)/dark-compact/button_maximize.svg \
	$(metacitydir)/dark-compact/button_menu_prelight.svg \
	$(metacitydir)/dark-compact/button_menu_pressed.svg \
	$(metacitydir)/dark-compact/button_menu.svg \
	$(metacitydir)/dark-compact/button_minimize_prelight.svg \
	$(metacitydir)/dark-compact/button_minimize_pressed.svg \
	$(metacitydir)/dark-compact/button_minimize.svg \
	$(metacitydir)/dark-compact/button_shade_prelight.svg \
	$(metacitydir)/dark-compact/button_shade_pressed.svg \
	$(metacitydir)/dark-compact/button_shade.svg \
	$(metacitydir)/dark-compact/button_unshade_prelight.svg \
	$(metacitydir)/dark-compact/button_unshade_pressed.svg \
	$(metacitydir)/dark-compact/button_unshade.svg \
	$(metacitydir)/dark-compact/max_button_unmaximize_prelight.svg \
	$(metacitydir)/dark-compact/max_button_unmaximize_pressed.svg \
	$(metacitydir)/dark-compact/max_button_unmaximize.svg \
	$(metacitydir)/dark-compact/thumbnail.png
metacity_lumine_xml_file = \
	$(metacitydir)/light/metacity-theme-3.xml
metacity_lumine_asset_file = \
	$(metacitydir)/light/button_close_prelight.svg \
	$(metacitydir)/light/button_close_pressed.svg \
	$(metacitydir)/light/button_close.svg \
	$(metacitydir)/light/button_maximize_prelight.svg \
	$(metacitydir)/light/button_maximize_pressed.svg \
	$(metacitydir)/light/button_maximize.svg \
	$(metacitydir)/light/button_menu_prelight.svg \
	$(metacitydir)/light/button_menu_pressed.svg \
	$(metacitydir)/light/button_menu.svg \
	$(metacitydir)/light/button_minimize_prelight.svg \
	$(metacitydir)/light/button_minimize_pressed.svg \
	$(metacitydir)/light/button_minimize.svg \
	$(metacitydir)/light/button_shade_prelight.svg \
	$(metacitydir)/light/button_shade_pressed.svg \
	$(metacitydir)/light/button_shade.svg \
	$(metacitydir)/light/button_unshade_prelight.svg \
	$(metacitydir)/light/button_unshade_pressed.svg \
	$(metacitydir)/light/button_unshade.svg \
	$(metacitydir)/light/max_button_unmaximize_prelight.svg \
	$(metacitydir)/light/max_button_unmaximize_pressed.svg \
	$(metacitydir)/light/max_button_unmaximize.svg \
	$(metacitydir)/light/thumbnail.png
metacity_lumine_compact_xml_file = \
	$(metacitydir)/light-compact/metacity-theme-3.xml
metacity_lumine_compact_asset_file = \
	$(metacitydir)/light-compact/button_close_prelight.svg \
	$(metacitydir)/light-compact/button_close_pressed.svg \
	$(metacitydir)/light-compact/button_close.svg \
	$(metacitydir)/light-compact/button_maximize_prelight.svg \
	$(metacitydir)/light-compact/button_maximize_pressed.svg \
	$(metacitydir)/light-compact/button_maximize.svg \
	$(metacitydir)/light-compact/button_menu_prelight.svg \
	$(metacitydir)/light-compact/button_menu_pressed.svg \
	$(metacitydir)/light-compact/button_menu.svg \
	$(metacitydir)/light-compact/button_minimize_prelight.svg \
	$(metacitydir)/light-compact/button_minimize_pressed.svg \
	$(metacitydir)/light-compact/button_minimize.svg \
	$(metacitydir)/light-compact/button_shade_prelight.svg \
	$(metacitydir)/light-compact/button_shade_pressed.svg \
	$(metacitydir)/light-compact/button_shade.svg \
	$(metacitydir)/light-compact/button_unshade_prelight.svg \
	$(metacitydir)/light-compact/button_unshade_pressed.svg \
	$(metacitydir)/light-compact/button_unshade.svg \
	$(metacitydir)/light-compact/max_button_unmaximize_prelight.svg \
	$(metacitydir)/light-compact/max_button_unmaximize_pressed.svg \
	$(metacitydir)/light-compact/max_button_unmaximize.svg \
	$(metacitydir)/light-compact/thumbnail.png

xfwmdir   = $(srcdir)/xfwm4
xfwm_file = \
	$(xfwmdir)/dark/bottom-active.png \
	$(xfwmdir)/dark/bottom-inactive.png \
	$(xfwmdir)/dark/bottom-left-active.png \
	$(xfwmdir)/dark/bottom-left-inactive.png \
	$(xfwmdir)/dark/bottom-right-active.png \
	$(xfwmdir)/dark/bottom-right-inactive.png \
	$(xfwmdir)/dark/close-active.png \
	$(xfwmdir)/dark/close-inactive.png \
	$(xfwmdir)/dark/close-prelight.png \
	$(xfwmdir)/dark/close-pressed.png \
	$(xfwmdir)/dark/hide-active.png \
	$(xfwmdir)/dark/hide-inactive.png \
	$(xfwmdir)/dark/hide-prelight.png \
	$(xfwmdir)/dark/hide-pressed.png \
	$(xfwmdir)/dark/left-active.png \
	$(xfwmdir)/dark/left-inactive.png \
	$(xfwmdir)/dark/maximize-active.png \
	$(xfwmdir)/dark/maximize-inactive.png \
	$(xfwmdir)/dark/maximize-prelight.png \
	$(xfwmdir)/dark/maximize-pressed.png \
	$(xfwmdir)/dark/maximize-toggled-active.png \
	$(xfwmdir)/dark/maximize-toggled-inactive.png \
	$(xfwmdir)/dark/maximize-toggled-prelight.png \
	$(xfwmdir)/dark/maximize-toggled-pressed.png \
	$(xfwmdir)/dark/menu-active.png \
	$(xfwmdir)/dark/menu-inactive.png \
	$(xfwmdir)/dark/menu-prelight.png \
	$(xfwmdir)/dark/menu-pressed.png \
	$(xfwmdir)/dark/right-active.png \
	$(xfwmdir)/dark/right-inactive.png \
	$(xfwmdir)/dark/shade-active.png \
	$(xfwmdir)/dark/shade-inactive.png \
	$(xfwmdir)/dark/shade-prelight.png \
	$(xfwmdir)/dark/shade-pressed.png \
	$(xfwmdir)/dark/shade-toggled-active.png \
	$(xfwmdir)/dark/shade-toggled-inactive.png \
	$(xfwmdir)/dark/shade-toggled-prelight.png \
	$(xfwmdir)/dark/shade-toggled-pressed.png \
	$(xfwmdir)/dark/stick-active.png \
	$(xfwmdir)/dark/stick-inactive.png \
	$(xfwmdir)/dark/stick-prelight.png \
	$(xfwmdir)/dark/stick-pressed.png \
	$(xfwmdir)/dark/stick-toggled-active.png \
	$(xfwmdir)/dark/stick-toggled-inactive.png \
	$(xfwmdir)/dark/stick-toggled-prelight.png \
	$(xfwmdir)/dark/stick-toggled-pressed.png \
	$(xfwmdir)/dark/themerc \
	$(xfwmdir)/dark/title-1-active-shaded.png \
	$(xfwmdir)/dark/title-1-active.png \
	$(xfwmdir)/dark/title-1-inactive.png \
	$(xfwmdir)/dark/title-2-active.png \
	$(xfwmdir)/dark/title-2-inactive.png \
	$(xfwmdir)/dark/title-3-active.png \
	$(xfwmdir)/dark/title-3-inactive.png \
	$(xfwmdir)/dark/title-4-active.png \
	$(xfwmdir)/dark/title-4-inactive.png \
	$(xfwmdir)/dark/title-5-active.png \
	$(xfwmdir)/dark/title-5-inactive.png \
	$(xfwmdir)/dark/top-left-active-shaded.png \
	$(xfwmdir)/dark/top-left-active.png \
	$(xfwmdir)/dark/top-left-inactive.png \
	$(xfwmdir)/dark/top-right-active-shaded.png \
	$(xfwmdir)/dark/top-right-active.png \
	$(xfwmdir)/dark/top-right-inactive.png
xfwm_lumine_file = \
	$(xfwmdir)/light/bottom-active.png \
	$(xfwmdir)/light/bottom-inactive.png \
	$(xfwmdir)/light/bottom-left-active.png \
	$(xfwmdir)/light/bottom-left-inactive.png \
	$(xfwmdir)/light/bottom-right-active.png \
	$(xfwmdir)/light/bottom-right-inactive.png \
	$(xfwmdir)/light/close-active.png \
	$(xfwmdir)/light/close-inactive.png \
	$(xfwmdir)/light/close-prelight.png \
	$(xfwmdir)/light/close-pressed.png \
	$(xfwmdir)/light/hide-active.png \
	$(xfwmdir)/light/hide-inactive.png \
	$(xfwmdir)/light/hide-prelight.png \
	$(xfwmdir)/light/hide-pressed.png \
	$(xfwmdir)/light/left-active.png \
	$(xfwmdir)/light/left-inactive.png \
	$(xfwmdir)/light/maximize-active.png \
	$(xfwmdir)/light/maximize-inactive.png \
	$(xfwmdir)/light/maximize-prelight.png \
	$(xfwmdir)/light/maximize-pressed.png \
	$(xfwmdir)/light/maximize-toggled-active.png \
	$(xfwmdir)/light/maximize-toggled-inactive.png \
	$(xfwmdir)/light/maximize-toggled-prelight.png \
	$(xfwmdir)/light/maximize-toggled-pressed.png \
	$(xfwmdir)/light/menu-active.png \
	$(xfwmdir)/light/menu-inactive.png \
	$(xfwmdir)/light/menu-prelight.png \
	$(xfwmdir)/light/menu-pressed.png \
	$(xfwmdir)/light/right-active.png \
	$(xfwmdir)/light/right-inactive.png \
	$(xfwmdir)/light/shade-active.png \
	$(xfwmdir)/light/shade-inactive.png \
	$(xfwmdir)/light/shade-prelight.png \
	$(xfwmdir)/light/shade-pressed.png \
	$(xfwmdir)/light/shade-toggled-active.png \
	$(xfwmdir)/light/shade-toggled-inactive.png \
	$(xfwmdir)/light/shade-toggled-prelight.png \
	$(xfwmdir)/light/shade-toggled-pressed.png \
	$(xfwmdir)/light/stick-active.png \
	$(xfwmdir)/light/stick-inactive.png \
	$(xfwmdir)/light/stick-prelight.png \
	$(xfwmdir)/light/stick-pressed.png \
	$(xfwmdir)/light/stick-toggled-active.png \
	$(xfwmdir)/light/stick-toggled-inactive.png \
	$(xfwmdir)/light/stick-toggled-prelight.png \
	$(xfwmdir)/light/stick-toggled-pressed.png \
	$(xfwmdir)/light/themerc \
	$(xfwmdir)/light/title-1-active-shaded.png \
	$(xfwmdir)/light/title-1-active.png \
	$(xfwmdir)/light/title-1-inactive.png \
	$(xfwmdir)/light/title-2-active.png \
	$(xfwmdir)/light/title-2-inactive.png \
	$(xfwmdir)/light/title-3-active.png \
	$(xfwmdir)/light/title-3-inactive.png \
	$(xfwmdir)/light/title-4-active.png \
	$(xfwmdir)/light/title-4-inactive.png \
	$(xfwmdir)/light/title-5-active.png \
	$(xfwmdir)/light/title-5-inactive.png \
	$(xfwmdir)/light/top-left-active-shaded.png \
	$(xfwmdir)/light/top-left-active.png \
	$(xfwmdir)/light/top-left-inactive.png \
	$(xfwmdir)/light/top-right-active-shaded.png \
	$(xfwmdir)/light/top-right-active.png \
	$(xfwmdir)/light/top-right-inactive.png
xfwm_compact_file = \
	$(xfwmdir)/dark-compact/bottom-active.png \
	$(xfwmdir)/dark-compact/bottom-inactive.png \
	$(xfwmdir)/dark-compact/bottom-left-active.png \
	$(xfwmdir)/dark-compact/bottom-left-inactive.png \
	$(xfwmdir)/dark-compact/bottom-right-active.png \
	$(xfwmdir)/dark-compact/bottom-right-inactive.png \
	$(xfwmdir)/dark-compact/close-active.png \
	$(xfwmdir)/dark-compact/close-inactive.png \
	$(xfwmdir)/dark-compact/close-prelight.png \
	$(xfwmdir)/dark-compact/close-pressed.png \
	$(xfwmdir)/dark-compact/hide-active.png \
	$(xfwmdir)/dark-compact/hide-inactive.png \
	$(xfwmdir)/dark-compact/hide-prelight.png \
	$(xfwmdir)/dark-compact/hide-pressed.png \
	$(xfwmdir)/dark-compact/left-active.png \
	$(xfwmdir)/dark-compact/left-inactive.png \
	$(xfwmdir)/dark-compact/maximize-active.png \
	$(xfwmdir)/dark-compact/maximize-inactive.png \
	$(xfwmdir)/dark-compact/maximize-prelight.png \
	$(xfwmdir)/dark-compact/maximize-pressed.png \
	$(xfwmdir)/dark-compact/maximize-toggled-active.png \
	$(xfwmdir)/dark-compact/maximize-toggled-inactive.png \
	$(xfwmdir)/dark-compact/maximize-toggled-prelight.png \
	$(xfwmdir)/dark-compact/maximize-toggled-pressed.png \
	$(xfwmdir)/dark-compact/menu-active.png \
	$(xfwmdir)/dark-compact/menu-inactive.png \
	$(xfwmdir)/dark-compact/menu-prelight.png \
	$(xfwmdir)/dark-compact/menu-pressed.png \
	$(xfwmdir)/dark-compact/right-active.png \
	$(xfwmdir)/dark-compact/right-inactive.png \
	$(xfwmdir)/dark-compact/shade-active.png \
	$(xfwmdir)/dark-compact/shade-inactive.png \
	$(xfwmdir)/dark-compact/shade-prelight.png \
	$(xfwmdir)/dark-compact/shade-pressed.png \
	$(xfwmdir)/dark-compact/shade-toggled-active.png \
	$(xfwmdir)/dark-compact/shade-toggled-inactive.png \
	$(xfwmdir)/dark-compact/shade-toggled-prelight.png \
	$(xfwmdir)/dark-compact/shade-toggled-pressed.png \
	$(xfwmdir)/dark-compact/stick-active.png \
	$(xfwmdir)/dark-compact/stick-inactive.png \
	$(xfwmdir)/dark-compact/stick-prelight.png \
	$(xfwmdir)/dark-compact/stick-pressed.png \
	$(xfwmdir)/dark-compact/stick-toggled-active.png \
	$(xfwmdir)/dark-compact/stick-toggled-inactive.png \
	$(xfwmdir)/dark-compact/stick-toggled-prelight.png \
	$(xfwmdir)/dark-compact/stick-toggled-pressed.png \
	$(xfwmdir)/dark-compact/themerc \
	$(xfwmdir)/dark-compact/title-1-active-shaded.png \
	$(xfwmdir)/dark-compact/title-1-active.png \
	$(xfwmdir)/dark-compact/title-1-inactive.png \
	$(xfwmdir)/dark-compact/title-2-active.png \
	$(xfwmdir)/dark-compact/title-2-inactive.png \
	$(xfwmdir)/dark-compact/title-3-active.png \
	$(xfwmdir)/dark-compact/title-3-inactive.png \
	$(xfwmdir)/dark-compact/title-4-active.png \
	$(xfwmdir)/dark-compact/title-4-inactive.png \
	$(xfwmdir)/dark-compact/title-5-active.png \
	$(xfwmdir)/dark-compact/title-5-inactive.png \
	$(xfwmdir)/dark-compact/top-left-active-shaded.png \
	$(xfwmdir)/dark-compact/top-left-active.png \
	$(xfwmdir)/dark-compact/top-left-inactive.png \
	$(xfwmdir)/dark-compact/top-right-active-shaded.png \
	$(xfwmdir)/dark-compact/top-right-active.png \
	$(xfwmdir)/dark-compact/top-right-inactive.png
xfwm_lumine_compact_file = \
	$(xfwmdir)/light-compact/bottom-active.png \
	$(xfwmdir)/light-compact/bottom-inactive.png \
	$(xfwmdir)/light-compact/bottom-left-active.png \
	$(xfwmdir)/light-compact/bottom-left-inactive.png \
	$(xfwmdir)/light-compact/bottom-right-active.png \
	$(xfwmdir)/light-compact/bottom-right-inactive.png \
	$(xfwmdir)/light-compact/close-active.png \
	$(xfwmdir)/light-compact/close-inactive.png \
	$(xfwmdir)/light-compact/close-prelight.png \
	$(xfwmdir)/light-compact/close-pressed.png \
	$(xfwmdir)/light-compact/hide-active.png \
	$(xfwmdir)/light-compact/hide-inactive.png \
	$(xfwmdir)/light-compact/hide-prelight.png \
	$(xfwmdir)/light-compact/hide-pressed.png \
	$(xfwmdir)/light-compact/left-active.png \
	$(xfwmdir)/light-compact/left-inactive.png \
	$(xfwmdir)/light-compact/maximize-active.png \
	$(xfwmdir)/light-compact/maximize-inactive.png \
	$(xfwmdir)/light-compact/maximize-prelight.png \
	$(xfwmdir)/light-compact/maximize-pressed.png \
	$(xfwmdir)/light-compact/maximize-toggled-active.png \
	$(xfwmdir)/light-compact/maximize-toggled-inactive.png \
	$(xfwmdir)/light-compact/maximize-toggled-prelight.png \
	$(xfwmdir)/light-compact/maximize-toggled-pressed.png \
	$(xfwmdir)/light-compact/menu-active.png \
	$(xfwmdir)/light-compact/menu-inactive.png \
	$(xfwmdir)/light-compact/menu-prelight.png \
	$(xfwmdir)/light-compact/menu-pressed.png \
	$(xfwmdir)/light-compact/right-active.png \
	$(xfwmdir)/light-compact/right-inactive.png \
	$(xfwmdir)/light-compact/shade-active.png \
	$(xfwmdir)/light-compact/shade-inactive.png \
	$(xfwmdir)/light-compact/shade-prelight.png \
	$(xfwmdir)/light-compact/shade-pressed.png \
	$(xfwmdir)/light-compact/shade-toggled-active.png \
	$(xfwmdir)/light-compact/shade-toggled-inactive.png \
	$(xfwmdir)/light-compact/shade-toggled-prelight.png \
	$(xfwmdir)/light-compact/shade-toggled-pressed.png \
	$(xfwmdir)/light-compact/stick-active.png \
	$(xfwmdir)/light-compact/stick-inactive.png \
	$(xfwmdir)/light-compact/stick-prelight.png \
	$(xfwmdir)/light-compact/stick-pressed.png \
	$(xfwmdir)/light-compact/stick-toggled-active.png \
	$(xfwmdir)/light-compact/stick-toggled-inactive.png \
	$(xfwmdir)/light-compact/stick-toggled-prelight.png \
	$(xfwmdir)/light-compact/stick-toggled-pressed.png \
	$(xfwmdir)/light-compact/themerc \
	$(xfwmdir)/light-compact/title-1-active-shaded.png \
	$(xfwmdir)/light-compact/title-1-active.png \
	$(xfwmdir)/light-compact/title-1-inactive.png \
	$(xfwmdir)/light-compact/title-2-active.png \
	$(xfwmdir)/light-compact/title-2-inactive.png \
	$(xfwmdir)/light-compact/title-3-active.png \
	$(xfwmdir)/light-compact/title-3-inactive.png \
	$(xfwmdir)/light-compact/title-4-active.png \
	$(xfwmdir)/light-compact/title-4-inactive.png \
	$(xfwmdir)/light-compact/title-5-active.png \
	$(xfwmdir)/light-compact/title-5-inactive.png \
	$(xfwmdir)/light-compact/top-left-active-shaded.png \
	$(xfwmdir)/light-compact/top-left-active.png \
	$(xfwmdir)/light-compact/top-left-inactive.png \
	$(xfwmdir)/light-compact/top-right-active-shaded.png \
	$(xfwmdir)/light-compact/top-right-active.png \
	$(xfwmdir)/light-compact/top-right-inactive.png

openboxdir   = $(srcdir)/openbox-3
openbox_file = \
	$(openboxdir)/close.xbm \
	$(openboxdir)/desk_toggled.xbm \
	$(openboxdir)/desk.xbm \
	$(openboxdir)/iconify.xbm \
	$(openboxdir)/max_toggled.xbm \
	$(openboxdir)/max.xbm \
	$(openboxdir)/shade_toggled.xbm \
	$(openboxdir)/shade.xbm
openbox_rc_file = \
	$(openboxdir)/themerc
openbox_rc_noir_file = \
	$(openboxdir)/themerc-dark
openbox_rc_lumine_file = \
	$(openboxdir)/themerc-light
openbox_compton_file = \
	$(openboxdir)/compton.conf

parallel_option = --null --no-notice --line-buffer --jobs 100%

# ***************************************************
# * Generate PNG images and clone SVG and XBM files *
# ***************************************************

# ignore -jN option for --enable-parallel
.NOTPARALLEL:

all:
if ENABLE_FLASHBACK
	cd $(srcdir)/asset/assets-metacity-scripts && \
	./clone-assets-metacity.sh && \
	./render-assets-metacity.sh
endif

if ENABLE_CINNAMON
if !ENABLE_FLASHBACK
	cd $(srcdir)/asset/assets-metacity-scripts && \
	./clone-assets-metacity.sh && \
	./render-assets-metacity.sh
endif
endif

if ENABLE_MATE
if !ENABLE_FLASHBACK
	cd $(srcdir)/asset/assets-metacity-scripts && \
	./clone-assets-metacity.sh && \
	./render-assets-metacity.sh
endif
endif

if ENABLE_XFCE
if ENABLE_PARALLEL
	cd $(srcdir)/asset/assets-xfwm-scripts && \
		./recolor-assets-xfwm.sh
	cd $(srcdir)/asset/assets-xfwm-scripts && \
	$(PARALLEL) $(parallel_option) ./render-assets-xfwm.sh ::: \
		button1 \
		button2 \
		edge \
		title
else
	cd $(srcdir)/asset/assets-xfwm-scripts && \
		./recolor-assets-xfwm.sh && \
		./render-assets-xfwm.sh all
endif
endif

if ENABLE_OPENBOX
	cd $(srcdir)/asset/assets-openbox-scripts && \
		./clone-assets-openbox.sh
	cd $(srcdir)/openbox-3/ && \
		./recolor-openbox.sh
endif

# *****************
# * Install files *
# *****************

install-data-local:
if ENABLE_FLASHBACK
	$(MKDIR_P) $(platadir)/metacity-1
	$(MKDIR_P) $(luminedir)/metacity-1
	$(MKDIR_P) $(noirdir)/metacity-1
	$(MKDIR_P) $(platacompactdir)/metacity-1
	$(MKDIR_P) $(luminecompactdir)/metacity-1
	$(MKDIR_P) $(noircompactdir)/metacity-1
	cp -Rv $(metacity_xml_file) $(platadir)/metacity-1
	cp -Rv $(metacity_xml_file) $(noirdir)/metacity-1
	cp -Rv $(metacity_lumine_xml_file) $(luminedir)/metacity-1
	cp -Rv $(metacity_compact_xml_file) $(platacompactdir)/metacity-1
	cp -Rv $(metacity_compact_xml_file) $(noircompactdir)/metacity-1
	cp -Rv $(metacity_lumine_compact_xml_file) $(luminecompactdir)/metacity-1
	cp -Rv $(metacity_asset_file) $(platadir)/metacity-1
	cp -Rv $(metacity_asset_file) $(noirdir)/metacity-1
	cp -Rv $(metacity_lumine_asset_file) $(luminedir)/metacity-1
	cp -Rv $(metacity_compact_asset_file) $(platacompactdir)/metacity-1
	cp -Rv $(metacity_compact_asset_file) $(noircompactdir)/metacity-1
	cp -Rv $(metacity_lumine_compact_asset_file) $(luminecompactdir)/metacity-1
endif

if ENABLE_CINNAMON
if !ENABLE_FLASHBACK
	$(MKDIR_P) $(platadir)/metacity-1
	$(MKDIR_P) $(luminedir)/metacity-1
	$(MKDIR_P) $(noirdir)/metacity-1
	$(MKDIR_P) $(platacompactdir)/metacity-1
	$(MKDIR_P) $(luminecompactdir)/metacity-1
	$(MKDIR_P) $(noircompactdir)/metacity-1
	cp -Rv $(metacity_xml_file) $(platadir)/metacity-1
	cp -Rv $(metacity_xml_file) $(noirdir)/metacity-1
	cp -Rv $(metacity_lumine_xml_file) $(luminedir)/metacity-1
	cp -Rv $(metacity_compact_xml_file) $(platacompactdir)/metacity-1
	cp -Rv $(metacity_compact_xml_file) $(noircompactdir)/metacity-1
	cp -Rv $(metacity_lumine_compact_xml_file) $(luminecompactdir)/metacity-1
	cp -Rv $(metacity_asset_file) $(platadir)/metacity-1
	cp -Rv $(metacity_asset_file) $(noirdir)/metacity-1
	cp -Rv $(metacity_lumine_asset_file) $(luminedir)/metacity-1
	cp -Rv $(metacity_compact_asset_file) $(platacompactdir)/metacity-1
	cp -Rv $(metacity_compact_asset_file) $(noircompactdir)/metacity-1
	cp -Rv $(metacity_lumine_compact_asset_file) $(luminecompactdir)/metacity-1
endif
endif

if ENABLE_MATE
if !ENABLE_FLASHBACK
	$(MKDIR_P) $(platadir)/metacity-1
	$(MKDIR_P) $(luminedir)/metacity-1
	$(MKDIR_P) $(noirdir)/metacity-1
	$(MKDIR_P) $(platacompactdir)/metacity-1
	$(MKDIR_P) $(luminecompactdir)/metacity-1
	$(MKDIR_P) $(noircompactdir)/metacity-1
	cp -Rv $(metacity_xml_file) $(platadir)/metacity-1
	cp -Rv $(metacity_xml_file) $(noirdir)/metacity-1
	cp -Rv $(metacity_lumine_xml_file) $(luminedir)/metacity-1
	cp -Rv $(metacity_compact_xml_file) $(platacompactdir)/metacity-1
	cp -Rv $(metacity_compact_xml_file) $(noircompactdir)/metacity-1
	cp -Rv $(metacity_lumine_compact_xml_file) $(luminecompactdir)/metacity-1
	cp -Rv $(metacity_asset_file) $(platadir)/metacity-1
	cp -Rv $(metacity_asset_file) $(noirdir)/metacity-1
	cp -Rv $(metacity_lumine_asset_file) $(luminedir)/metacity-1
	cp -Rv $(metacity_compact_asset_file) $(platacompactdir)/metacity-1
	cp -Rv $(metacity_compact_asset_file) $(noircompactdir)/metacity-1
	cp -Rv $(metacity_lumine_compact_asset_file) $(luminecompactdir)/metacity-1
endif
endif

if ENABLE_XFCE
	$(MKDIR_P) $(platadir)/xfwm4
	$(MKDIR_P) $(noirdir)/xfwm4
	$(MKDIR_P) $(luminedir)/xfwm4
	$(MKDIR_P) $(platacompactdir)/xfwm4
	$(MKDIR_P) $(noircompactdir)/xfwm4
	$(MKDIR_P) $(luminecompactdir)/xfwm4
	cp -Rv $(xfwm_file) $(platadir)/xfwm4
	cp -Rv $(xfwm_file) $(noirdir)/xfwm4
	cp -Rv $(xfwm_lumine_file) $(luminedir)/xfwm4
	cp -Rv $(xfwm_compact_file) $(platacompactdir)/xfwm4
	cp -Rv $(xfwm_compact_file) $(noircompactdir)/xfwm4
	cp -Rv $(xfwm_lumine_compact_file) $(luminecompactdir)/xfwm4
endif

if ENABLE_OPENBOX
	$(MKDIR_P) $(platadir)/openbox-3
	$(MKDIR_P) $(noirdir)/openbox-3
	$(MKDIR_P) $(luminedir)/openbox-3
	cp -Rv $(openbox_file) $(platadir)/openbox-3
	cp -Rv $(openbox_rc_file) $(platadir)/openbox-3/themerc
	cp -Rv $(openbox_compton_file) $(platadir)/openbox-3
	cp -Rv $(openbox_file) $(noirdir)/openbox-3
	cp -Rv $(openbox_rc_noir_file) $(noirdir)/openbox-3/themerc
	cp -Rv $(openbox_file) $(luminedir)/openbox-3
	cp -Rv $(openbox_rc_lumine_file) $(luminedir)/openbox-3/themerc
endif

# *******************
# * Uninstall files *
# *******************

uninstall-local:
if ENABLE_FLASHBACK
	test -e $(noirdir)/metacity-1 && rm -rfv $(noirdir)/metacity-1
	test -e $(luminedir)/metacity-1 && rm -rfv $(luminedir)/metacity-1
	test -e $(platadir)/metacity-1 && rm -rfv $(platadir)/metacity-1
	test -e $(noircompactdir)/metacity-1 && rm -rfv $(noircompactdir)/metacity-1
	test -e $(luminecompactdir)/metacity-1 && rm -rfv $(luminecompactdir)/metacity-1
	test -e $(platacompactdir)/metacity-1 && rm -rfv $(platacompactdir)/metacity-1
endif

if ENABLE_CINNAMON
if !ENABLE_FLASHBACK
	test -e $(noirdir)/metacity-1 && rm -rfv $(noirdir)/metacity-1
	test -e $(luminedir)/metacity-1 && rm -rfv $(luminedir)/metacity-1
	test -e $(platadir)/metacity-1 && rm -rfv $(platadir)/metacity-1
	test -e $(noircompactdir)/metacity-1 && rm -rfv $(noircompactdir)/metacity-1
	test -e $(luminecompactdir)/metacity-1 && rm -rfv $(luminecompactdir)/metacity-1
	test -e $(platacompactdir)/metacity-1 && rm -rfv $(platacompactdir)/metacity-1
endif
endif

if ENABLE_MATE
if !ENABLE_FLASHBACK
	test -e $(noirdir)/metacity-1 && rm -rfv $(noirdir)/metacity-1
	test -e $(luminedir)/metacity-1 && rm -rfv $(luminedir)/metacity-1
	test -e $(platadir)/metacity-1 && rm -rfv $(platadir)/metacity-1
	test -e $(noircompactdir)/metacity-1 && rm -rfv $(noircompactdir)/metacity-1
	test -e $(luminecompactdir)/metacity-1 && rm -rfv $(luminecompactdir)/metacity-1
	test -e $(platacompactdir)/metacity-1 && rm -rfv $(platacompactdir)/metacity-1
endif
endif

if ENABLE_XFCE
	test -e $(noirdir)/xfwm4 && rm -rfv $(noirdir)/xfwm4
	test -e $(luminedir)/xfwm4 && rm -rfv $(luminedir)/xfwm4
	test -e $(platadir)/xfwm4 && rm -rfv $(platadir)/xfwm4
endif

if ENABLE_OPENBOX
	test -e $(noirdir)/openbox-3 && rm -rfv $(noirdir)/openbox-3
	test -e $(luminedir)/openbox-3 && rm -rfv $(luminedir)/openbox-3
	test -e $(platadir)/openbox-3 && rm -rfv $(platadir)/openbox-3
endif

# ****************************
# * Clean up generated files *
# ****************************

CLEANFILES =

if ENABLE_FLASHBACK
CLEANFILES += \
	$(metacitydir)/light/*.svg \
	$(metacitydir)/light/*.png \
	$(metacitydir)/dark/*.svg \
	$(metacitydir)/dark/*.png \
	$(metacitydir)/light-compact/*.svg \
	$(metacitydir)/light-compact/*.png \
	$(metacitydir)/dark-compact/*.svg \
	$(metacitydir)/dark-compact/*.png \
	$(srcdir)/asset/assets-metacity/common/button_close_pressed.svg \
	$(srcdir)/asset/assets-metacity/common/button_close_prelight.svg \
	$(srcdir)/asset/assets-metacity/common-compact/button_close_pressed.svg \
	$(srcdir)/asset/assets-metacity/common-compact/button_close_prelight.svg \
	$(srcdir)/asset/inkscape.log
endif

if ENABLE_CINNAMON
if !ENABLE_FLASHBACK
CLEANFILES += \
	$(metacitydir)/light/*.svg \
	$(metacitydir)/light/*.png \
	$(metacitydir)/dark/*.svg \
	$(metacitydir)/dark/*.png \
	$(metacitydir)/light-compact/*.svg \
	$(metacitydir)/light-compact/*.png \
	$(metacitydir)/dark-compact/*.svg \
	$(metacitydir)/dark-compact/*.png \
	$(srcdir)/asset/assets-metacity/common/button_close_pressed.svg \
	$(srcdir)/asset/assets-metacity/common/button_close_prelight.svg \
	$(srcdir)/asset/assets-metacity/common-compact/button_close_pressed.svg \
	$(srcdir)/asset/assets-metacity/common-compact/button_close_prelight.svg \
	$(srcdir)/asset/inkscape.log
endif
endif

if ENABLE_MATE
if !ENABLE_FLASHBACK
CLEANFILES += \
	$(metacitydir)/light/*.svg \
	$(metacitydir)/light/*.png \
	$(metacitydir)/dark/*.svg \
	$(metacitydir)/dark/*.png \
	$(metacitydir)/light-compact/*.svg \
	$(metacitydir)/light-compact/*.png \
	$(metacitydir)/dark-compact/*.svg \
	$(metacitydir)/dark-compact/*.png \
	$(srcdir)/asset/assets-metacity/common/button_close_pressed.svg \
	$(srcdir)/asset/assets-metacity/common/button_close_prelight.svg \
	$(srcdir)/asset/assets-metacity/common-compact/button_close_pressed.svg \
	$(srcdir)/asset/assets-metacity/common-compact/button_close_prelight.svg \
	$(srcdir)/asset/inkscape.log
endif
endif

if ENABLE_XFCE
CLEANFILES += \
	$(xfwmdir)/light/*.png \
	$(xfwmdir)/dark/*.png \
	$(xfwmdir)/light-compact/*.png \
	$(xfwmdir)/dark-compact/*.png \
	$(srcdir)/asset/assets-xfwm/light/close-pressed.svg \
	$(srcdir)/asset/assets-xfwm/light/close-prelight.svg \
	$(srcdir)/asset/assets-xfwm/dark/close-pressed.svg \
	$(srcdir)/asset/assets-xfwm/dark/close-prelight.svg \
	$(srcdir)/asset/assets-xfwm/light-compact/close-pressed.svg \
	$(srcdir)/asset/assets-xfwm/light-compact/close-prelight.svg \
	$(srcdir)/asset/assets-xfwm/dark-compact/close-pressed.svg \
	$(srcdir)/asset/assets-xfwm/dark-compact/close-prelight.svg \
	$(srcdir)/asset/inkscape.log
endif

if ENABLE_OPENBOX
CLEANFILES += \
	$(openboxdir)/*.xbm \
	$(openboxdir)/themerc \
	$(openboxdir)/themerc-light \
	$(openboxdir)/themerc-dark
endif

DISTCLEANFILES = \
	$(CLEANFILES)
